# interceptorDroneSim

./: .gitignore  CLAUDE.md  MAINDIGITAL_TWIN_ARCHITECTURE.md  MATLAB_SOFTWARE_DESIGN_AND_PLAN.md  README.md  pyproject.toml
matlab/: run_example.m  run_tests.m
matlab/+analysis/: PlotPhaseTimeline.m  PlotRangeTimeline.m  PlotTrajectories.m  SummaryMetrics.m
matlab/+engagement/: InitEngagement.m  StepEngagement.m
matlab/+guidance/: CommandGuidance.m  ProNav.m  PurePursuit.m
matlab/+models/: ApplyGuidance.m  CheckIntercept.m  DetectionProbability.m  InFieldOfRegard.m  InitInterceptor.m  InitSensor.m  InitTarget.m  LaunchInterceptor.m  MeasureTarget.m  StepInterceptor.m  StepTarget.m  TryClassify.m  TryDetect.m
matlab/+sim/: DefaultScenario.m  ScenarioLoader.m  SimulationRunner.m  ValidateScenario.m
matlab/+utils/: Bearing.m  ClosingSpeed.m  Distance.m  LineOfSightRate.m  UnitVector.m  WrapAngle.m
matlab/scenarios/: example_intercept.json
matlab/tests/: test_engagement.m  test_scenario_loader.m  test_utils_guidance.m
scenarios/: example_intercept.yaml
scripts/: run_scenario.py
src/interceptor_sim/: __init__.py
src/interceptor_sim/core/: engine.py  entity.py  scenario.py
src/interceptor_sim/engagement/: classification.py  detection.py  kill_chain.py
src/interceptor_sim/guidance/: midcourse.py  proportional_nav.py  pure_pursuit.py
src/interceptor_sim/models/: interceptor.py  sensor.py  target.py
src/interceptor_sim/utils/: geometry.py
tests/: test_entity.py  test_guidance.py  test_kill_chain.py  test_sensor.py
(+2 files in other folders)
